--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
     "@types/node": "^16.18.94",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.23",
+    "antd": "^5.16.0",
     "react": "^18.2.0",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sanitize-html": "^2.13.0",
+    "sass": "^1.72.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.5.2"
+  },
+  "devDependencies": {
+    "@types/sanitize-html": "^2.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
